--- a/package.json
+++ b/package.json
@@ -17,8 +17,14 @@
   },
   "homepage": "https://github.com/PENA-VARELA-DEVELOPMENT/notes-todo-app#readme",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "express": "^4.17.1",
-    "mongoose": "^5.7.11"
+    "express-session": "^1.17.0",
+    "express-validator": "^6.3.0",
+    "http-errors": "^1.7.3",
+    "mongoose": "^5.7.11",
+    "multer": "^1.4.2",
+    "passport": "^0.4.0"
   },
   "devDependencies": {
     "nodemon": "^1.19.4"
