--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Aplicación de notas y todo's ",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon ./index"
+    "dev": "nodemon ./index",
+    "start": "node ./index"
   },
   "repository": {
     "type": "git",
